--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "~2.0.0",
+    "mongoose": "^6.8.4",
     "morgan": "~1.10.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "npm-check-updates": "^16.6.2"
   }
 }
